prevent flicker on scroll bar toggle

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,6 +19,7 @@ html {
 }
 
 body {
+  overflow-y: scroll; // prevent flicker on scroll bar toggle
   // min-height: 2000px;
   height: 100%;
   // background-color: lighten( desaturate( @andrz-bg-color-overlay, 60%), 20% );
